--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -14,7 +14,7 @@ nodepools:
   name: "nodepool"
   cloneFrom: "/datacentername/vm/templates-folder-path/ubuntu-22.04-cloudimg" ## # If you choose creation type clone a name of what you want to clone is required
   cpuCount: '2'
-  creationType: "vm"            #Creation type when creating a new virtual machine. Supported values: vm, template, library, legacy'
+  creationType: "template"      #Creation type when creating a new virtual machine. Supported values: vm, template, library, legacy'
   vcenter: "vcentername"        # vSphere IP/hostname for vCenter
   datacenter: "datacenter"      # vSphere datastore for virtual machine
   datastore: "datastorepath"    # vSphere datastore for virtual machine
@@ -28,6 +28,7 @@ nodepools:
     - /datastore/network/VM Network_01
   pool: "path-to-resources"     # vSphere resource pool for docker VM
   sshPort: '22'                 # If using a non-B2D image you can specify the ssh port
+  sshUser: docker               #
   sshUserGroup: staff           # If using a non-B2D image the uploaded keys will need chown'ed, defaults to staff e.g. docker:staf
   vcenterPort: '443'            # vSphere Port for vCenter
 ######
